# news_video_maker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md  review.txt
.claude/: settings.local.json
.claude/commands/: fetch-news.md  fetch-papers.md  fetch-space.md  fetch-trivia.md  generate-metadata.md  generate-script-paper.md  generate-script-space.md  generate-script-trivia.md  generate-script.md  generate-video.md  process-article.md  process-paper.md  process-space.md  process-trivia.md  review-video.md  run-pipeline.md  upload-youtube.md  validate-video.md
config/: schedule.yml
docs/: development_history.md
scripts/: post_comments.py  run_pipeline.bat  run_pipeline.py  scheduler.bat  scheduler.py  test_sd.py
specs/: 01_news_fetcher.md  01b_paper_fetcher.md  01c_trivia_fetcher.md  01d_space_fetcher.md  02_content_processor.md  03_script_generator.md  04_video_generator.md  05_video_reviewer.md  05_youtube_uploader.md  06_pipeline.md  07_scheduler.md
src/news_video_maker/: config.py  history.py  pipeline.py
src/news_video_maker/fetcher/: models.py  paper.py  rss.py  space.py  trivia.py
src/news_video_maker/uploader/: youtube.py
src/news_video_maker/video/: audio_mixer.py  background.py  background_video.py  bgm_cache.py  composer.py  screenshot.py  tts.py  validator.py  visuals.py
