[project]
name = "news-video-maker"
version = "0.1.0"
description = "Tech news short video auto-generator for YouTube"
dependencies = [
    "claude-agent-sdk>=0.0.1",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "moviepy>=2.0.0",
    "pillow>=11.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.11.0",
    "playwright>=1.45.0",
    "torch>=2.0.0",
    "diffusers>=0.37.0",
    "transformers>=5.3.0",
    "accelerate>=1.13.0",
    "ginza>=5.0.0",
    "ja-ginza>=5.0.0",
]
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
